[package]
name = "rust-ethernet-ip"
version = "0.4.0"
edition = "2021"
authors = ["Sergio Gallegos <sergio@example.com>"]
description = "High-performance EtherNet/IP communication library for Allen-Bradley CompactLogix and ControlLogix PLCs"
license = "MIT"
repository = "https://github.com/sergiogallegos/rust-ethernet-ip"
homepage = "https://github.com/sergiogallegos/rust-ethernet-ip"
documentation = "https://docs.rs/rust_ethernet_ip"
readme = "README.md"
keywords = ["ethernet-ip", "plc", "industrial", "automation", "allen-bradley"]
categories = ["network-programming", "embedded", "api-bindings"]
rust-version = "1.70"

[lib]
name = "rust_ethernet_ip"
crate-type = ["rlib", "cdylib"]  # Support both library formats

[[bin]]
name = "enip-test"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
bytes = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
log = "0.4"
env_logger = "0.10"
lazy_static = "1.4"
vergen = { version = "8.3", features = ["build", "git", "gitcl"] }

[dev-dependencies]
tokio-test = "0.4"
cargo-tarpaulin = "0.18"

[features]
default = []
ffi = []  # Enable C FFI exports

[build-dependencies]
vergen = { version = "8.3", features = ["build", "git", "gitcl"] }