[workspace]
members = [
    ".",  # Main library (current directory)
    "pywrapper"  # Python wrapper
]

[package]
name = "rust-ethernet-ip"
version = "0.5.2"
edition = "2021"
authors = ["Sergio Gallegos <sergio@example.com>"]
description = "High-performance EtherNet/IP communication library for Allen-Bradley CompactLogix and ControlLogix PLCs"
license = "MIT"
repository = "https://github.com/sergiogallegos/rust-ethernet-ip"
homepage = "https://github.com/sergiogallegos/rust-ethernet-ip"
documentation = "https://docs.rs/rust_ethernet_ip"
readme = "README.md"
keywords = ["ethernet-ip", "plc", "industrial", "automation", "allen-bradley"]
categories = ["network-programming", "embedded", "api-bindings"]
rust-version = "1.70"

# Exclude large files that aren't needed for the library
exclude = [
    # Next.js build artifacts (huge!)
    "examples/**/frontend/.next/",
    "examples/**/frontend/node_modules/",
    
    # Package lock files (large and not needed)
    "**/package-lock.json",
    
    # Compiled binaries
    "**/*.dll.a",
    "**/*.dll",
    "**/*.so",
    "**/*.dylib",
    "**/*.exe",
    "**/*.lib",
    "**/*.pdb",
    
    # Build/cache directories
    "**/target/",
    "**/.next/",
    "**/dist/",
    "**/build/",
    "**/cache/",
    
    # Development files
    "**/.vscode/",
    "**/.idea/",
    "**/.vs/",
    "**/bin/",
    "**/obj/",
    
    # Trace and log files
    "**/.next/trace",
    
    # Example C# projects (keep source, exclude builds)
    "examples/**/bin/",
    "examples/**/obj/",
]

[lib]
name = "rust_ethernet_ip"
crate-type = ["rlib", "cdylib", "staticlib"]  # Added staticlib for Python bindings

[[bin]]
name = "enip-test"
path = "src/main.rs"

[[bench]]
name = "performance_benchmark"
harness = false

[dependencies]
tokio = { version = "1.0", features = ["full"] }
bytes = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
log = "0.4"
env_logger = "0.10"
lazy_static = "1.4"
vergen = { version = "8.3", features = ["build", "git", "gitcl"] }
pyo3 = { version = "0.26", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tokio-test = "0.4"
cargo-tarpaulin = "0.18"
criterion = "0.5"

[features]
default = []
ffi = []  # Enable C FFI exports
python = ["pyo3/extension-module"]  # Enable Python bindings

[build-dependencies]
vergen = { version = "8.3", features = ["build", "git", "gitcl"] }
