[package]
name = "rust_ethernet_ip"
version = "0.4.0"
edition = "2021"
description = "Python bindings for rust-ethernet-ip"
license = "MIT"
repository = "https://github.com/sergiogallegos/rust-ethernet-ip"
documentation = "https://docs.rs/rust_ethernet_ip"

[lib]
name = "rust_ethernet_ip"
crate-type = ["cdylib", "rlib"]

[dependencies]
rust-ethernet-ip = { path = ".." }
pyo3 = { version = "0.20", features = ["extension-module"] }
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"
futures = "0.3" 