[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "rust_ethernet_ip"
version = "0.5.1"
description = "Python bindings for rust-ethernet-ip"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Topic :: System :: Hardware",
]

[project.urls]
Homepage = "https://github.com/sergiogallegos/rust-ethernet-ip"
Repository = "https://github.com/sergiogallegos/rust-ethernet-ip"
Documentation = "https://docs.rs/rust_ethernet_ip"

[tool.maturin]
python-source = "python"
module-name = "rust_ethernet_ip"
features = ["pyo3/extension-module"]
python = "python" 